# 10x-coder

./: .gitignore  README.md  main.py  pyproject.toml
crew/coding_crew/config/: agents.yaml  tasks.yaml
tenx_coder/: .env.example  README.md  pyproject.toml
tenx_coder/src/tenx_coder/: crew.py  main.py
tenx_coder/src/tenx_coder/config/: agents.yaml  tasks.yaml
