[project]
name = "tenx_coder"
version = "0.1.0"
description = "tenx-coder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
tenx_coder = "tenx_coder.main:run"
run_crew = "tenx_coder.main:run"
train = "tenx_coder.main:train"
replay = "tenx_coder.main:replay"
test = "tenx_coder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
